# bot-baka

./: .env.prod  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-build.yml
data/nailongremove/: labels.txt  nailong_tiny.onnx-1776777135881.tmp  nailong_tiny.onnx-1776777175258.tmp
